@@ -18,6 +18,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #1989813 [interface] Deleting multiple views (space in name) 
 - bug #1992628 [parser] SQL parser removes essential space 
 - bug #1989281 [export] CSV for MS Excel incorrect escaping of double quotes 
+- bug #1959855 [interface] Font size option problem when no config file 
 
 2.11.7.0 (2008-06-23)
 - bug #1908719 [interface] New field cannot be auto-increment and primary key 
